fix: mobile menu is now readable

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,12 @@
   --font-ibm-plex-mono: 'IBM Plex Mono', monospace;
 }
 
+.nextra-mobile-nav {
+  z-index: 25;
+  background-color: rgba(255,255,255,0.7);
+  backdrop-filter: blur(32px);
+}
+
 .nextra-search > input:focus-visible {
   background-color: rgba(255, 255, 255, 0.5);
 }
